# DE-ZoomCamp

./: .gitignore  LICENSE  README.md  pyproject.toml
Module-1-Docker-Terraform/: py.ipynb
Module-1-Docker-Terraform/pipeline/: notebook.ipynb  pipeline.py
Module-1-Docker-Terraform/terraform/: variables.tf
Module-2-Kestra/: README.md  docker-compose.yaml
Module-2-Kestra/flows/: 06_gcp_kv.yaml
Module-3-data-warehouse/: DLT_upload_to_GCP.ipynb  README.md  load_yellow_taxi_data.py  main.py  pyproject.toml
Module-4-analytics-engineering/: .gitignore  README.md  main.py  pyproject.toml
Module-4-analytics-engineering/taxi_rides_ny/: DUPLICATE_INVESTIGATION_REPORT.md  ingest.py  packages.yml
Module-4-analytics-engineering/taxi_rides_ny/macros/: get_vendor_names.sql
Module-5-data-platforms/: main.py  pyproject.toml
Module-5-data-platforms/zoomcamp/: README.md
Module-6-batch/: README.md  docker-compose.yml  pyproject.toml  yellow_taxi_2025_11.ipynb
Module-6-batch/code/: 03_test.ipynb  04_pyspark.ipynb  05_taxi_schema.ipynb  06.ipynb  download_data.sh
Module-7-streaming/: README.md  consumer_q3.py  docker-compose.yml  main.py  producer_q2.py  pyproject.toml
Module-7-streaming/flink/: Dockerfile
Module-7-streaming/notebook/: consumer.ipynb  producer.ipynb
Workshop-1-data ingestion/: 1.py  README.md  dlt_Pipeline_Overview.ipynb  github-docs.yaml  github.md  github_pipeline.py
Workshop-1-data ingestion/taxi-pipeline/: taxi_pipeline.py
key/: main.tf
pipeline/: docker-compose.yaml  ingest_data.py  notebook.ipynb  pyproject.toml
(+23 files in other folders)
