[project]
name = "de-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt[duckdb,workspace]>=1.21.0",
    "pandas>=3.0.0",
]


[tool.uv.workspace]
members = [
    "Module-1-Docker-Terraform",
    "Module-3-data-warehouse",
    "Module-4-analytics-engineering",
    "Module-5-data-platforms",
    "Module-6-batch",
]
